@@ -28,6 +28,10 @@
  ******************************************************************************
  *
  * $Log$
+ * Revision 1.8  2015-05-30 20:30:27  bfriesen
+ * * contrib/addtiffo/addtiffo.c (main): Possibly address Coverity
+ * 1024226 "Untrusted value as argument".
+ *
  * Revision 1.7  2010-06-08 18:55:15  bfriesen
  * * contrib: Add an emacs formatting mode footer to all source files
  * so that emacs can be effectively used.
@@ -120,7 +124,8 @@ int main( int argc, char ** argv )
     while( nOverviewCount < argc - 2 && nOverviewCount < 100 )
     {
         anOverviews[nOverviewCount] = atoi(argv[nOverviewCount+2]);
-        if( anOverviews[nOverviewCount] <= 0)
+        if( (anOverviews[nOverviewCount] <= 0) ||
+            ((anOverviews[nOverviewCount] > 1024)))
         {
             fprintf( stderr, "Incorrect parameters\n" );
             return(1);
@@ -170,7 +175,7 @@ int main( int argc, char ** argv )
 /*
  * Local Variables:
  * mode: c
- * c-basic-offset: 8
+ * c-basic-offset: 4
  * fill-column: 78
  * End:
  */
